# private_library

./: .default.pg_service.conf  .gitignore  QWEN.md  README.md  default.config.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
.tasks/: 001_list_filters.md  002_book_edition_type.md  003_notes.md  004_editable_reading_log.md
core/: apps.py  models.py  urls.py
core/forms/: book.py
core/migrations/: 0001_initial.py  0002_alter_book_title_original_alter_readinglog_book_and_more.py
core/views/: author.py  book.py  book_series.py  year.py
docker/: Dockerfile  compose.yaml  default.env
docker/nginx/: nginx.conf
docker_debug/: Dockerfile  compose.yaml  default.env
front/: urls.py
front/forms/: book.py  book_edition.py
front/views/: author.py  book.py  book_edition.py  publisher.py  reading_log.py  year.py
private_library/: config_loader.py  settings.py  urls.py  wsgi.py
specs/001-list-filters/: data-model.md  documentation.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-book-edition-type/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-zettelkasten-notes/: checklist.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-editable-reading-log/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/core/: enums.py  filters.py  helpers.py  models.py
src/front/: apps.py  urls.py
templates/: base_layout.html  index.html
(+116 files in other folders)
