[project]
name = "private-library"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.1.1",
    "django-autocomplete-light==3.12.1",
    "django-bootstrap5==24.3",
    "psycopg[binary]==3.2.9",
    "pyyaml==6.0.2",
]
